--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teen Robotics Club</title>
+    <title>Core Tech Lab</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         :root {
@@ -84,7 +84,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">🤖 RoboClub</a>
+            <a class="navbar-brand" href="#">🤖 Core Tech Lab</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -124,7 +124,7 @@
                     <p class="h3" id="missionText"></p>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/mission.svg" alt="Mission" class="img-fluid">
+                    <img src="images/mission.jpeg" alt="Mission" class="img-fluid">
                 </div>
             </div>
         </div>
