feat: add workshop details overlay and enhance course card interactions

--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
                 <!-- Course cards will be populated by JavaScript -->
             </div>
         </div>
+        
+        <!-- Expanded Workshop View Overlay -->
+        <div id="workshop-overlay" class="workshop-overlay">
+            <div class="workshop-expanded-container">
+                <div class="workshop-expanded-content">
+                    <!-- Content will be populated dynamically -->
+                </div>
+                <button id="close-workshop" class="close-workshop" aria-label="Close workshop details">
+                    <i class="bi bi-x-lg"></i>
+                </button>
+            </div>
+        </div>
     </section>
 
     <!-- Bots Section -->
