feat: add new actuator and controller images, update sensor images, and modify product details in data.json; localized form placeholders in index.html

--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
                         <h3 class="mb-4">Envoyer Un Message</h3>
                         <form id="contact-form">
                             <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="Your Name" required>
+                                <input type="text" class="form-control" placeholder="Ton Nom" required>
                             </div>
                             <div class="mb-3">
-                                <input type="email" class="form-control" placeholder="Your Email" required>
+                                <input type="email" class="form-control" placeholder="Ton Email" required>
                             </div>
-                            <div class="mb-3">
+                            <!-- <div class="mb-3">
                                 <select class="form-select" title="Inquiry Type">
                                     <option selected disabled>I'm interested in...</option>
                                     <option>Taking a course</option>
@@ -228,9 +228,9 @@
                                     <option>Workshop information</option>
                                     <option>Other inquiry</option>
                                 </select>
-                            </div>
+                            </div> -->
                             <div class="mb-3">
-                                <textarea class="form-control" rows="4" placeholder="Your Message" required></textarea>
+                                <textarea class="form-control" rows="4" placeholder="Ton Message" required></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary w-100">Envoyer Message</button>
                         </form>
