feat: add new bot images and update bot details in data.json; modify section title in index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- Bots Section -->
     <section id="bots" class="py-5">
         <div class="container">
-            <h2 class="section-title text-center mb-5" data-aos="fade-up">Meet the Bots 🤖</h2>
+            <h2 class="section-title text-center mb-5" data-aos="fade-up">Projets 🤖</h2>
             <div class="row g-4" id="bots-container">
                 <!-- Bot cards will be populated by JavaScript -->
             </div>
