--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <!-- Footer -->
     <footer class="py-4 bg-darker text-center">
         <div class="container">
-            <p class="mb-0 " style="color: rgba(255, 255, 255, 0.5);">© <span id="current-year"></span> Core Tech Lab <br> All rights reserved</p>
+            <p class="mb-0 " >© <span id="current-year"></span> Core Tech Lab <br> All rights reserved</p>
         </div>
     </footer>
 
