--- a/index.html
+++ b/index.html
@@ -59,14 +59,7 @@
         <div class="container">
             <h2 class="section-title text-center mb-5" data-aos="fade-up">NOTRE STRATÉGIE</h2>
             <div class="row align-items-center">
-                <div class="col-lg-5 mb-4 mb-lg-0" data-aos="fade-right">
-                    <div class="strategy-icon-container">
-                        <div class="strategy-icon-inner">
-                            <i class="bi bi-gear-fill strategy-main-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-7" data-aos="fade-left">
+                <div class="col-lg-6" data-aos="fade-up">
                     <div class="strategy-card mb-4">
                         <h3 class="strategy-section-title">
                             <i class="bi bi-bullseye strategy-section-icon"></i>
@@ -83,7 +76,8 @@
                         <p id="formation-continue-description"></p>
                         <div id="technologies" class="mt-3"></div>
                     </div>
-
+                </div>
+                <div class="col-lg-6" data-aos="fade-up">
                     <div class="strategy-card mb-4">
                         <h4 class="strategy-section-title">
                             <i class="bi bi-person-gear strategy-section-icon"></i>
@@ -93,7 +87,7 @@
                         <div id="personalized-formations"></div>
                     </div>
 
-                    <div class="team-spirit-box" data-aos="zoom-in">
+                    <div class="team-spirit-box" data-aos="fade-up">
                         <i class="bi bi-people-fill team-spirit-icon"></i>
                         <h4 id="team-spirit-title"></h4>
                         <p class="mb-0" id="team-spirit-description"></p>
@@ -220,15 +214,6 @@
                             <div class="mb-3">
                                 <input type="email" class="form-control" placeholder="Ton Email" required>
                             </div>
-                            <!-- <div class="mb-3">
-                                <select class="form-select" title="Inquiry Type">
-                                    <option selected disabled>I'm interested in...</option>
-                                    <option>Taking a course</option>
-                                    <option>Joining the club</option>
-                                    <option>Workshop information</option>
-                                    <option>Other inquiry</option>
-                                </select>
-                            </div> -->
                             <div class="mb-3">
                                 <textarea class="form-control" rows="4" placeholder="Ton Message" required></textarea>
                             </div>
