feat: enhance products section layout with grid display; update styles for responsiveness and improve join section design

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1 class="display-2 fw-bold text-white mb-3" data-aos="fade-up" id="hero-tagline"></h1>
             <p class="lead mb-4" data-aos="fade-up" data-aos-delay="200" id="mission-statement"></p>
             <div data-aos="fade-up" data-aos-delay="400">
-                <a href="#" class="btn btn-primary btn-lg glow-button" id="hero-cta" title="Learn more about our lab">
+                <a href="#join" class="btn btn-primary btn-lg glow-button" id="hero-cta" title="Learn more about our lab" role="button" aria-label="Learn more about our lab">
                     <span id="hero-cta-text"></span>
                 </a>
             </div>
@@ -129,6 +129,7 @@
         </div>
     </section>
 
+
     <!-- Products Section -->
     <section id="products-section">
         <div class="products-section-title">
@@ -141,21 +142,19 @@
                 <!-- Category buttons will be populated by JavaScript -->
             </div>
 
-            <div class="rotation-wheel">
-                <div class="wheel-container" id="wheel-container">
-                    <!-- Products will be populated by JavaScript -->
-                </div>
+            <div class="products-grid" id="products-grid">
+                <!-- Products will be populated by JavaScript -->
             </div>
         </div>
     </section>
 
     <!-- Join Section -->
-    <section id="join" class="py-5">
+    <section id="join">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <h2 class="section-title mb-4" data-aos="fade-up">Rejoindre Le Club</h2>
-                    <div class="glass-card p-4 p-md-5" data-aos="fade-up">
+                    <div class="glass-card p-3 p-md-3" data-aos="fade-up">
                         <div class="mb-4">
                             <h3 class="mb-3">Pourquoi?</h3>
                             <ul class="text-start join-list" id="why-join-list">
@@ -228,7 +227,7 @@
     <!-- Footer -->
     <footer class="py-4 bg-darker text-center">
         <div class="container">
-            <p class="mb-0 " >© <span id="current-year"></span> Core Tech Lab <br> All rights reserved</p>
+            <p class="mb-0 ">© <span id="current-year"></span> Core Tech Lab <br> All rights reserved</p>
         </div>
     </footer>
 
